peek.css
/*! Peek.js (c) 2014 Mark Macdonald | http://mtmacdonald.github.io/peek/LICENSE */

/*
  chart
*/

.canvas {float: left;}

/**********************************************************************************************************************/

/*
  axes
*/

.axis path, .axis line{
  fill: none;
  stroke: grey;
  stroke-width: 1;
  shape-rendering: crispEdges; 
}

.axis text {
  font-family: sans-serif;
  font-size: 11px;
}

.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
}
.grid path {
    stroke-width: 0;
}

/**********************************************************************************************************************/

/*
  legends
*/

.legend {
  float: left;
	width: 300px;
}

.legend div {
  /*inherited line height*/
}

.key {
  width: 18px;
  display: inline-block;
  box-sizing: border-box;
  vertical-align: middle;
  border-style: solid;
  border-width: 6px;
  border-radius: 3px;
}

.key-text {
  margin 0;
	padding-left: 4px;
  vertical-align: middle;
}

/**********************************************************************************************************************/

/*
  lines
*/

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 2;
}

circle {
  stroke: steelblue;
  stroke-width: 2px;
}

.infobox {
  position: absolute;
  min-width: 100px;
  padding: 6px 6px;
  border-radius: 4px;
  box-shadow: 2px 2px 2px rgba(68,68,68,0.4);
  background-color: rgba(255,255,255,.75);
  display: none;
}
  .infobox p {
    margin:0;
  }

